[gd_scene load_steps=5 format=3 uid="uid://brh44icmyjtl"]

[ext_resource type="Script" uid="uid://cnxa761q0c7v3" path="res://scripts/ui/calendar/calendar_view.gd" id="1_dmrpb"]
[ext_resource type="PackedScene" uid="uid://cwltwoexcf05o" path="res://scenes/ui/common/navigation_bar.tscn" id="2_r13kb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jk68l"]
bg_color = Color(0.9, 0.93, 0.96, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2x7pg"]
bg_color = Color(0.95, 0.97, 0.99, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.85, 0.9, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="CalendarView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dmrpb")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.95, 0.95, 0.97, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="NavigationBar" parent="VBoxContainer" instance=ExtResource("2_r13kb")]
layout_mode = 2

[node name="Header" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jk68l")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Header"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Header/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PrevButton" type="Button" parent="VBoxContainer/Header/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "<"

[node name="MonthLabel" type="Label" parent="VBoxContainer/Header/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "March 2025"
horizontal_alignment = 1

[node name="NextButton" type="Button" parent="VBoxContainer/Header/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = ">"

[node name="ViewModeOption" type="OptionButton" parent="VBoxContainer/Header/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
selected = 1
item_count = 3
popup/item_0/text = "Day"
popup/item_0/id = 0
popup/item_1/text = "Week"
popup/item_1/id = 1
popup/item_2/text = "Month"
popup/item_2/id = 2

[node name="Filters" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jk68l")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Filters"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Filters/MarginContainer"]
layout_mode = 2

[node name="SiteLabel" type="Label" parent="VBoxContainer/Filters/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Site:"

[node name="SiteFilter" type="OptionButton" parent="VBoxContainer/Filters/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2

[node name="HSpacer" type="Control" parent="VBoxContainer/Filters/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClassificationLabel" type="Label" parent="VBoxContainer/Filters/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Classification:"

[node name="ClassificationFilter" type="OptionButton" parent="VBoxContainer/Filters/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="TodayButton" type="Button" parent="VBoxContainer/Filters/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Today"

[node name="CalendarContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_2x7pg")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/CalendarContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CalendarContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DayLabels" type="GridContainer" parent="VBoxContainer/CalendarContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 7

[node name="SundayLabel" type="Label" parent="VBoxContainer/CalendarContainer/MarginContainer/VBoxContainer/DayLabels"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sunday"
horizontal_alignment = 1

[node name="MondayLabel" type="Label" parent="VBoxContainer/CalendarContainer/MarginContainer/VBoxContainer/DayLabels"]
layout_mode = 2
size_flags_horizontal = 3
text = "Monday"
horizontal_alignment = 1

[node name="TuesdayLabel" type="Label" parent="VBoxContainer/CalendarContainer/MarginContainer/VBoxContainer/DayLabels"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tuesday"
horizontal_alignment = 1

[node name="WednesdayLabel" type="Label" parent="VBoxContainer/CalendarContainer/MarginContainer/VBoxContainer/DayLabels"]
layout_mode = 2
size_flags_horizontal = 3
text = "Wednesday"
horizontal_alignment = 1

[node name="ThursdayLabel" type="Label" parent="VBoxContainer/CalendarContainer/MarginContainer/VBoxContainer/DayLabels"]
layout_mode = 2
size_flags_horizontal = 3
text = "Thursday"
horizontal_alignment = 1

[node name="FridayLabel" type="Label" parent="VBoxContainer/CalendarContainer/MarginContainer/VBoxContainer/DayLabels"]
layout_mode = 2
size_flags_horizontal = 3
text = "Friday"
horizontal_alignment = 1

[node name="SaturdayLabel" type="Label" parent="VBoxContainer/CalendarContainer/MarginContainer/VBoxContainer/DayLabels"]
layout_mode = 2
size_flags_horizontal = 3
text = "Saturday"
horizontal_alignment = 1

[node name="CalendarGrid" type="GridContainer" parent="VBoxContainer/CalendarContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 7

[node name="StatusBar" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer/StatusBar"]
layout_mode = 2
text = "Ready."
